jellyfin/Manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jellyfin
spec:
  replicas: 1
  serviceName: jellyfin
  template:
    spec:
      containers:
      - name: jellyfin
        image: lscr.io/linuxserver/jellyfin:latest
        ports:
        - name: ui
          containerPort: 8096
        volumeMounts:
        - name: jellyfin-config
          mountPath: /config
        - name: jellyfin-tvshows
          mountPath: /data/tvshows
        - name: jellyfin-movies
          mountPath: /data/movies
  volumeClaimTemplates:
  - metadata:
      name: jellyfin-config
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: jellyfin-movies
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
  - metadata:
      name: jellyfin-tvshows
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: local-path
      resources:
        requests:
          storage: 5Gi
