jellyfin/Manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
spec:
  clusterIP: None
  ports:
  - name: ui
    port: 8096
    targetPort: 8096
    protocol: TCP
